[gd_scene load_steps=13 format=3 uid="uid://miem7rj474q6"]

[ext_resource type="Texture2D" uid="uid://bs6d08681j3dg" path="res://Assets/Tiny Swords (Update 010)/Resources/Gold Mine/GoldMine_Destroyed.png" id="1_3i7o6"]
[ext_resource type="Script" path="res://Scripts/Resources/gold_mine_resources.gd" id="1_nrp1e"]
[ext_resource type="Texture2D" uid="uid://bok8p2ooe82k5" path="res://icon.svg" id="2_40mwe"]
[ext_resource type="Texture2D" uid="uid://cfcxhgvx4kkb3" path="res://Assets/Tiny Swords (Update 010)/Resources/Gold Mine/GoldMine_Inactive.png" id="2_qgniu"]
[ext_resource type="Texture2D" uid="uid://bi316aqu21ipo" path="res://Assets/Tiny Swords (Update 010)/Resources/Gold Mine/GoldMine_Active.png" id="3_4nwbn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8c3a"]
size = Vector2(155, 95)

[sub_resource type="Animation" id="Animation_0q5mc"]
resource_name = "Activie"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_4nwbn")]
}

[sub_resource type="Animation" id="Animation_0vuyi"]
resource_name = "DeActive"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_qgniu")]
}

[sub_resource type="Animation" id="Animation_4t02u"]
resource_name = "over"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_3i7o6")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gf18u"]
_data = {
"Activie": SubResource("Animation_0q5mc"),
"DeActive": SubResource("Animation_0vuyi"),
"over": SubResource("Animation_4t02u")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6q8f"]
bg_color = Color(0.6, 0.6, 0.6, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghg0w"]
bg_color = Color(0.18966, 1, 0.508812, 1)

[node name="GoldMineResources" type="Area2D" groups=["Resources"]]
script = ExtResource("1_nrp1e")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-3.25234, -17)
scale = Vector2(1.05607, 1.5)
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-49, -9, 52, -12, 60.8407, 10.6667, 52, 34, 2, 29.3333, -46, 33)

[node name="SelectedTouched" type="TouchScreenButton" parent="."]
self_modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(-61, -55)
scale = Vector2(1, 0.742188)
texture_normal = ExtResource("2_40mwe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -10.5)
shape = SubResource("RectangleShape2D_g8c3a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3i7o6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gf18u")
}
autoplay = "DeActive"

[node name="ResourcesBar" type="ProgressBar" parent="."]
visible = false
offset_left = -42.0
offset_top = -96.0
offset_right = 42.0
offset_bottom = -69.0
theme_override_styles/background = SubResource("StyleBoxFlat_o6q8f")
theme_override_styles/fill = SubResource("StyleBoxFlat_ghg0w")
value = 100.0
show_percentage = false

[connection signal="pressed" from="SelectedTouched" to="." method="_on_selected_touched_pressed"]
[connection signal="released" from="SelectedTouched" to="." method="_on_selected_touched_released"]
